--- a/assignments/lesson-4/styles/small-4.css
+++ b/assignments/lesson-4/styles/small-4.css
@@ -12,12 +12,14 @@ body {
 	color: #000000;
 }
 
-	body header {
+	header {
 		margin: 10px auto;
 		background-color: #274c77;
 		border: 1px solid #bbb;
 		box-shadow: 0 0 30px #777;
 		text-align: center;
+		font-family: 'Libre Baskerville', serif;
+		color:#e7ecef;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -25,21 +27,24 @@ body {
 			background-color: none;
 			color: #274c77;
 		}
-		section header img, #headings {
+	header img, .siteHeading {
+			color: #e7ecef;
 			display: inline-block;
 			vertical-align: middle;
-			margin: 10px;
-			color: #e7ecef;
+			margin: 0px;
+			font-size: 40px;
 		}
 
-			h1 {font-size: 30px;}
-			h2 {font-size: 25px;}
-			h3 {font-size: 20px;}
-			h4 {font-size: 15px;}
-			h5 {font-size: 10px;}
+h1 {font-size: 30px;}
+h2 {font-size: 25px;}
+h3 {font-size: 20px;}
+h4 {font-size: 15px;}
+h5 {font-size: 10px;}
 
 			.motto { 
 				color: #a3cef1;
+				font-size: 12px;
+				padding: 8px;
 			}
 
 	main {
@@ -47,50 +52,74 @@ body {
 		margin: 10px;}
 
 	/* Styling the navigation menu */
-
-	nav ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		background-color: #6096ba;
+		/* This hides the items in the Navigation list from the user's view until they hover over the "Menu" */
+		
+		nav ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #6096ba;
+			font-size: 125%;
 	}
 
-	nav ul li { float: left;}
+		/* These lines format the font color, container size and remove the hyperlink underline */
 
-	li a, .dropbtn {
-		display: inline-block;
-		color:#274c77;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-		font-size: 110%
-	}
-
+		li a, .dropbtn {
+			display: block;
+			color:#274c77;
+			text-align: center;
+			padding: 10px 12px;
+			text-decoration: none;
+		}
+/*
+	nav ul li { float: left;} 
 	li a:hover, .dropdown:hover .dropbtn{
-		background-color: #e7ecef;}
+		background-color: #4c7894;}
 
 	li.dropdown {
 		display: inline-block; }
 
 	.dropdown-content {
-		display: none;
+		display: block;
 		position: absolute;
 		background-color: #6096ba;
 		min-width: 160px;
 		box-shadow: 0px 8px 8px;
 		z-index: 1;
 		font-family: 'Libre Baskerville', serif;
-		color: #020202;}
+		color: #020202;}*/
 
 	.dropdown:hover .dropdown-content a:hover {
-		background-color: #6096ba;
+		background-color: #4c7894;
 		text-decoration: none;
 		color: #e7ecef;}
 
 	.dropdown:hover .dropdown-content {
 	display: block;
+	}/* - Attempting
+	*/
+
+	/* Creates a uniform table with better spacing and allows a paragraph of content to sit on the side of the "weather summary" */
+	table {
+		float: left;}
+
+	th {
+		columns: 2;
+		text-align: right;}
+	
+	/* Article format to include a lighter obaque background with a border */
+
+	article {
+		margin: 10px auto;
+		background-color: #bec9db;
+		border: 1px solid #000;
+		box-shadow: 0 0 30px #777;
+		text-align: left;
+		padding: 10px;
 	}
+
+
 	/* Style format for address/contact */
 	footer {
 		margin: 10px;
@@ -101,6 +130,7 @@ body {
 	/* Style format for footer */
 	footer {
 		margin: 0;
-		background-color: #274c77;
+		padding: 10px 12px;
+		background-color: #6096ba;
 		color: #e7ecef;}
 
