--- a/assignments/lesson-4/styles/small-4.css
+++ b/assignments/lesson-4/styles/small-4.css
@@ -7,13 +7,14 @@
 
 body {
 	background-color: #e7ece7;
+	line-height: 32px;
 	margin: 10px;
 	font-size: 16px;
 	color: #000000;
 }
 
 	header {
-		margin: 10px auto;
+		margin: 5px auto;
 		background-color: #274c77;
 		border: 1px solid #bbb;
 		box-shadow: 0 0 30px #777;
@@ -32,19 +33,17 @@ body {
 			display: inline-block;
 			vertical-align: middle;
 			margin: 0px;
-			font-size: 40px;
 		}
 
-h1 {font-size: 30px;}
-h2 {font-size: 25px;}
-h3 {font-size: 20px;}
-h4 {font-size: 15px;}
-h5 {font-size: 10px;}
+h1 {font-size: 188%;}
+h2 {font-size: 157%;}
+h3 {font-size: 125%;}
+h4 {font-size: 94%;}
+h5 {font-size: 63%;}
 
 			.motto { 
 				color: #a3cef1;
-				font-size: 12px;
-				padding: 8px;
+				font-size: 75%;
 			}
 
 	main {
@@ -102,12 +101,13 @@ h5 {font-size: 10px;}
 
 	/* Creates a uniform table with better spacing and allows a paragraph of content to sit on the side of the "weather summary" */
 	table {
-		float: left;}
+		float: left; }
 
 	th {
 		columns: 2;
 		text-align: right;}
 	
+
 	/* Article format to include a lighter obaque background with a border */
 
 	article {
@@ -121,10 +121,9 @@ h5 {font-size: 10px;}
 
 
 	/* Style format for address/contact */
-	footer {
+	address {
 		margin: 10px;
-		background-color: #6096ba;
-		color: #e7ecef;}
+		color: #6096ba;}
 
 
 	/* Style format for footer */
