--- a/assignments/lesson-5/styles/small-5.css
+++ b/assignments/lesson-5/styles/small-5.css
@@ -8,33 +8,14 @@
 @media screen and (max-width: 415px ) {
     body { width: 100% }
 
-body {
-    background-color: #e7ece7;
-    margin: 1em;
-	font-size: 1em;
-	color: #000000;
-    }
+    div .weather5Day { display: none;}
+}
 
 
     /* HEADER - 
     * Formatting for header informaiton */
 
-	header {
-        margin: auto;
-		background-color: #274c77;
-		border: 1px solid #bbb;
-		box-shadow: 0 0 30px #777;
-		text-align: center;
-		font-family: 'Libre Baskerville', serif;
-		color:#e7ecef;
-    }
-    
 
-	h1, h2, h3, h4, h5, h6 {
-			font-family: 'Libre Baskerville', serif;
-			background-color: none;
-			color: #274c77;
-		}
 	header img, .siteHeading {
 			color: #e7ecef;
 			display: inline-block;
@@ -44,18 +25,6 @@ body {
             height: 50%;
             width: auto;
 		}
-
-h1 {font-size: 30px;}
-h2 {font-size: 25px;}
-h3 {font-size: 20px;}
-h4 {font-size: 15px;}
-h5 {font-size: 10px;}
-
-			.motto { 
-				color: #a3cef1;
-				font-size: 12px;
-				padding: 8px;
-			}
 
 /* MAIN - 
 * Formatting for main informaiton */
@@ -99,155 +68,7 @@ h5 {font-size: 10px;}
 	}/* - Attempting
     */
     
-    /* Image and text overlay */
-    .imageTown, .weatherTitle, .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherWindChill, .weatherWindSpeed, .townDiv {
-       position: absolute;
-    }
-
-    div .imageTown {
-        box-sizing: border-box;
-        background-color: rgba(255,0,0, 0.2);
-    }
-
-    img {
-        width: 100%;
-        height: auto;
-        margin: 0;
-    }        
-    
-    div .weatherTitle {
-        top: 0;
-        height: 75%;
-        width: 35%;
-        background-color: rgba(0,100,0, 0.8);
-    }
-
-    div .weatherTitle h3 {
-        font-weight: bold;
-        color: #8b8c89;
-        padding: 1%;
-        margin: 3%;
-        font-size: 80%;
-    }
-
-    h3 span.spacer {
-        padding: 0 5px;
-    }
-
-    /* Weather Summary content area */
-
-/* Image and text overlay */
-.imageTown, .weatherTitle, .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherWindChill, .weatherWindSpeed, .townDiv {
-    position: absolute;
- }
-
- /* Container box for image with text overlay */
- .flexContainer {
-     display: flex;   }
- }
-
- .flexCenter {
-     justify-content: center;    }
-
- .fullwidth {
-     height: 50vw; 
-     overflow: hidden;   }
-
- .itemCenter {
-     align-items: left;    }
-
- .fullHeight {
-     height: 25vh;
-     overflow: hidden;     }
-
- .centerImage {
-     background: url('images/PrestonID.jpg') center;
-     background-size: cover;    }
-
-div .weatherTitle {
-     position: absolute;
-     left: 20%;
-     height: 50%;
-     width: 27%;
-     background-color: rgba(0,100,0, 0.9);
-     margin: 5%;
-     align-items: initial;
- }
-
- div .weatherTitle h3 {
-     font-weight: bold;
-     color: #8b8c89;
-     padding: 10px;
-     margin: 5px;
- }
-
- h3 span.spacer {
-     padding: 0 5px;
- }
-
- /* Weather Summary content area */
-
- .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherTitle, .weatherWindChill, .weatherWindSpeed {
-     color: #e7ecef;
- }
-
- div .weatherCurrent { 
-     margin: 10px;
-     top: 3em;}
-
- div .weatherHigh { 
-     margin: 10px;
-     top: 5em;}
-
- div .weatherWindChill {
-     margin: 10px;
-     top: 7em;}
-
- div .weatherHumidity {
-     margin: 10px;
-     top: 9em;}
-
- div .weatherWindSpeed {
-     margin: 10px;
-     top: 11em;}
-
- div .forecast {
-     float: left;
-     margin: 0 10px;
- }
-    
-    /* Hide content for 5 Day Forecast, as per instructions */
-    div .weather5Day {
-        display: none;
-    }
-
-	/* Article format to include a lighter obaque background with a border */
-
-	article {
-		margin: 10px auto;
-		background-color: #bec9db;
-		border: 1px solid #000;
-		box-shadow: 0 0 30px #777;
-		text-align: left;
-		padding: 10px;
-	}
-
-
-	/* Style format for address/contact */
-	.contactMe {
-		margin: 10px;
-		background-color: #6096ba;
-        color: #e7ecef;
-    }
-        
-	/* Style format for footer */
-	footer {
-		margin: 0;
-		padding: 10px 12px;
-		background-color: #6096ba;
-        color: #e7ecef;
-    }
-
+   
         /* Map */
         div .mapouter, div .gmap_canvas 
         {
