--- a/assignments/lesson-5/styles/small-5.css
+++ b/assignments/lesson-5/styles/small-5.css
@@ -4,34 +4,83 @@
 @import url(https://fonts.googleapis.com/css?family=Libre+Baskerville);
 @import url(https://fonts.googleapis.com/css?family=Nunito|Open+Sans);
 
-/* To run media query for small screens */
-@media screen and (max-width: 415px ) {
-    body { width: 100% }
 
-    div .weather5Day { display: none;}
-}
+/* Standard Formatting for body and sublevels */
+body {
+    background-color: #e7ece7;
+    margin: 10px;
+    font-size: 16px;
+    color: #000;
+        }
 
+header {
+    margin: 5px;
+    background-color: #274c77;
+    border: 1px solid #bbb;
+    box-shadow: 0 0 30px #777;
+    text-align: center;
+    font-family: 'Libre Baskerville', serif;
+    color: #e7ecef;    }
 
-    /* HEADER - 
-    * Formatting for header informaiton */
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Libre Baskerville', serif;
+    background-color: none;
+    color: #274c77;     }
 
+h1 {font-size: 188%;} /* Equal to 35px */
+h2 {font-size: 157%;} /* Equal to 30px */
+h3 {font-size: 125%;} /* Equal to 25px */
+h4 {font-size: 94%;} /* Equal to 20px */
+h5 {font-size: 63%;} /* Equal to 15px */
 
-	header img, .siteHeading {
-			color: #e7ecef;
-			display: inline-block;
-			vertical-align: middle;
-			margin: 0px;
-            font-size: 40px;
-            height: 50%;
-            width: auto;
-		}
+main {
+    font-family: 'Nunito', sans-serif;
+    margin: 10px;   }
+
+/* Style format for address/contact */
+address {
+    margin: 10px;
+    color: #6096ba;}
+
+/* Style format for footer */
+footer {
+    margin: 0;
+    padding: 10px 12px;
+    background-color: #6096ba;
+    color: #e7ecef; }
+
+/* To run media query for small screens*/
+@media screen and (max-width: 500px ) {
+    body, header, nav, main, address, footer { 
+        width: 400px;
+        margin: auto;   }
+
+    div .weather5Day { 
+        display: none;  }
+
+    /*Decrease the globe image to fit screen
+    and on header - create more visual appeal */
+    header #homeTown {
+        float: left;
+        width: 10%;
+        height: 10%;  }
+
+    .siteHeading {
+        position: relative;
+        width: 75%;
+        color: #e7ecef;
+		display: inline-block;
+        vertical-align: middle;
+        margin: 0px;    }
+
+    .motto {
+        width: 100%;
+        color: #a3cef1;
+        font-size: 70%;
+        padding: 5%;  }
+    }
 
 /* MAIN - 
-* Formatting for main informaiton */
-
-	main {
-        font-family: 'Nunito', sans-serif;
-		margin: 10px;}
 
 	/* Styling the navigation menu */
 		/* This hides the items in the Navigation list from the user's view until they hover over the "Menu" */
@@ -46,7 +95,6 @@
 
         li {
             float:none;
-            border: .25px solid #8b8c89;
         }
 
 		/* These lines format the font color, container size and remove the hyperlink underline */
@@ -57,24 +105,122 @@
             padding: .5em;
             margin: auto;
 		}
+        li a.active {
+            background-color: #000;
+            width: auto;
+            color: #e7ecef;
+            padding: 0;
+            margin: 0;     }
 
-	.dropdown:hover .dropdown-content a:hover {
-		background-color: #4c7894;
-		text-decoration: none;
-		color: #e7ecef;}
+        li a:hover {
+            background-color: #e7ecef;
+            color: #274c77; }
+        
+        /*
+        .dropdown:hover .dropdown-content a:hover {
+            background-color: #4c7894;
+            text-decoration: none;
+            color: #e7ecef;}
 
-	.dropdown:hover .dropdown-content {
-	display: block;
-	}/* - Attempting
-    */
+        .dropdown:hover .dropdown-content {
+        display: block;  } - Attempting */
     
-   
-        /* Map */
-        div .mapouter, div .gmap_canvas 
-        {
-            width: 300;
-            height: 144;
-            overflow: scroll;
-            text-align: right;
-            overflow: hidden;
-            background: none !important;}
+    /* ARTICLE & SECTION CONTENT PORTION */
+        /* Image and text overlay */
+        .imageTown, .weatherSummaryBox, .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherWindChill, .weatherWindSpeed, .townDiv {
+            position: absolute;
+            justify-content: flex-start;    }
+    
+            /* Container box for image with text overlay */
+                .flexContainer {
+                    display: flex;   }
+        
+                .flexCenter {
+                    justify-content: center;    }
+        
+                .fullwidth {
+                    width: 80vw; 
+                    overflow: hidden;   }
+        
+                .itemCenter {
+                    align-items: center;    }
+        
+                .fullHeight {
+                    height: 25vh;
+                    overflow: hidden;     }
+        
+                .centerImage {
+                    background: url('images/PrestonID.png') center;
+                    background-size: cover;    }
+        
+            @media screen and (max-width: 500px) {
+                .weatherSummaryBox {
+                    height: 25%;
+                    width: 35%; }
+
+            .weatherSummaryBox {
+                float: relative;
+                left: 5%;
+                bottom:28.5%;
+                background-color: rgba(0,100,0, 0.9);
+                align-items: initial;
+                font-size: 80%;     }
+        
+            div .weatherSummaryBox h3 {
+                font-weight: bold;
+                color: #8b8c89;
+                padding: 5%;
+                margin: 2.5%;
+            }
+        
+            h3 span.spacer {
+                padding: 0 5px;
+            }
+        
+        /* Weather Summary content area */
+    
+        .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherTitle, .weatherWindChill, .weatherWindSpeed {
+            color: #e7ecef;
+        }
+    
+        div .weatherCurrent { 
+            margin: 10px;
+            top: 5em;}
+    
+        div .weatherHigh { 
+            margin: 10px;
+            top: 7em;}
+    
+        div .weatherWindChill {
+            margin: 10px;
+            top: 9em;}
+    
+        div .weatherHumidity {
+            margin: 10px;
+            top: 11em;}
+    
+        div .weatherWindSpeed {
+            margin: 10px;
+            top: 13em;}
+    
+        div .forecast {
+            float: left;
+            margin: 0 10px;
+        }
+
+        /* CONTACT AREA CONTENT */
+        address {
+            background-color: #a3cef1; }
+            
+            .contactInfo {
+                text-align: center;
+                padding: 5%;     }
+
+            /* Map 
+             div .gmap_canvas {
+                width: 200;
+                height: auto;
+                overflow: scroll;
+                border: 1px solid gray;
+                box-shadow: 0 0 10px #8b8c89;
+                align-content: center;    } */
