--- a/assignments/lesson-6/styles/small-6.css
+++ b/assignments/lesson-6/styles/small-6.css
@@ -24,7 +24,6 @@ header {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Libre Baskerville', serif;
-    background-color: none;
     color: #274c77;     }
 
 h1 {font-size: 188%;} /* Equal to 35px */
@@ -57,11 +56,11 @@ footer {
         display: none;  }
 
     /*Decrease the globe image to fit screen
-    and on header - create more visual appeal */
+    and on header - create more visual appeal 
     header img#homeTown {
         display: center;
         width: 10%;
-        height: 10%;  }
+        height: 10%;  }*/
 
     header section.siteHeading {
         position: relative;
@@ -118,44 +117,57 @@ footer {
             color: #274c77; }
 
     
+    /* MAIN SECTION FOMRATTING */
+
+    div h1 {
+        text-align: center; }
+
+    /* Container box for image with text overlay */
+
+        div figure.flexContainer {
+            display: flex;
+            margin: 0;
+            padding: 0;   }
+
+        div figure.flexCenter {
+            justify-content: center;    }
+
+        div figure.fullwidth img {
+            width: 100vw; 
+            overflow: hidden;   }
+
+        div figure.itemCenter {
+            align-items: center;    }
+
+/*    div figure.fullHeight {
+        height: 100vh;
+        overflow: hidden;     }
+        
+      div figure.centerImage {
+        background-image: url('../images/Preston500.jpg');
+        background-size: auto;   } */
+
+        div figure img {
+            width: 100%;
+            margin: 0;
+            padding: 0; }
+
+
     /* ARTICLE & SECTION CONTENT PORTION */
         /* Image and text overlay */
         .imageTown, .weatherSummaryBox, .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherWindChill, .weatherWindSpeed, .townDiv {
             position: absolute;
             justify-content: flex-start;    }
-    
-            /* Container box for image with text overlay 
-
-                .flexContainer {
-                    display: flex;   }
-        
-                .flexCenter {
-                    justify-content: center;    }
-        
-                .fullwidth {
-                    width: 65vw; 
-                    overflow: hidden;   }
-        
-                .itemCenter {
-                    align-items: center;    }
-        
-                .fullHeight {
-                    height: 100vh;
-                    overflow: hidden;     }
-        
-                .centerImage {
-                    background: url('../images/Preston500.jpg') center; 
-                    background-size: cover;    } */
-        
+       
      /* This is set for the small screen */               
-                .weatherSummaryBox {
-                    height: 25%;
+            div figure    .weatherSummaryBox {
+                    height: auto;
                     width: 35%; }
 
             .weatherSummaryBox {
-                float: relative;
+                float: left;
                 left: 5%;
-                bottom:28.5%;
+                bottom:0%;
                 background-color: rgba(0,100,0, 0.9);
                 align-items: initial;
                 font-size: 80%;     }
@@ -212,7 +224,12 @@ footer {
                 padding: 5%;     }
 
             /* Map */
-             div .gmap_canvas {float:right;    } 
+             div.gmap_canvas {float:right;    } 
+
+             div.gmap_canvas {
+                width: 400px;
+                border: 1px solid #555;
+                box-shadow: 1px 1px 1px #777; }
 
              /* FOOTER AREA */
              div.date {
