--- a/assignments/lesson-6/styles/large-6.css
+++ b/assignments/lesson-6/styles/large-6.css
@@ -3,8 +3,9 @@
  /* To run media query for large screens */
 @media screen and (min-width: 501px ) {
     body, header, nav, main, address, footer { 
-        width: 1024px;
-        margin: auto;   }
+        margin: auto;
+        width: 100%;
+        height: 100%;  }
 
     div .weather5Day { 
         display: block; }
@@ -35,78 +36,7 @@
                 font-size: 125%; }
 
 
-       /* li {
-            display: inline;    }
-
-		/* These lines format the font color, container size and remove the hyperlink underline */
-
-	/*	li a {
-			color:#274c77;
-			text-align: center;
-            text-decoration: none;
-            padding: .5em;
-		}
-
-        li a:hover {
-		background-color: #4c7894;
-		text-decoration: none;
-		color: #e7ecef;} */
-
-}
-         @media screen and (min-width: 501px) {
-            .weatherSummaryBox {
-                height: 25%;
-                width: 30%; }   }
-
-    .weatherSummaryBox {
-        float: relative;
-        left: 12.5%;
-        background-color: rgba(0,100,0, 0.9);
-        align-items: initial;
-        font-size: 80%;
-    } 
-
-    div .weatherSummaryBox h3 {
-        font-weight: bold;
-        color: #8b8c89;
-        padding: 10px;
-        margin: 5px;
-    }
-
-    h3 span.spacer {
-        padding: 0 5px;
-    }
-
-    /* Weather Summary content area */
-
-    .weatherCurrent, .weatherHigh, .weatherHumidity, .weatherTitle, .weatherWindChill, .weatherWindSpeed {
-        color: #e7ecef;
-    }
-
-    div .weatherCurrent { 
-        margin: 2%;
-        top: 3em;}
-
-    div .weatherHigh { 
-        margin: 10px;
-        top: 5em;}
-
-    div .weatherWindChill {
-        margin: 10px;
-        top: 7em;}
-
-    div .weatherHumidity {
-        margin: 10px;
-        top: 9em;}
-
-    div .weatherWindSpeed {
-        margin: 10px;
-        top: 11em;}
-
-    div .forecast {
-        float: left;
-        margin: 0 10px;     }
-
+  
     /* Weather for 5 Day Forecast section and comments */
     div .weather5Day {
         width: 90%;
@@ -204,6 +134,14 @@
         color: #e7ecef;
     }
 
-    div figure.centerImage {
-        background-image: url('../images/Preston1100.jpg');
-        background-size: auto;   }
+    @media screen and (min-width: 700px) {
+        div.contactMe {
+            float: left;
+            width: 45%;
+            padding: 5rem; }
+        
+        div.gmap_canvas {
+            float: right;
+            width: 50%;
+            height: auto;
+            padding: rem;}  }
