--- a/assignments/lesson-6/styles/large-6.css
+++ b/assignments/lesson-6/styles/large-6.css
@@ -97,51 +97,30 @@
         float: none;
         display: inline; }
 
-	/* Style format for address/contact */
-    /*.contactMe {
-        position: realative;
-		margin: 10px;
-		background-color: #6096ba;
-        color: #e7ecef;
-        width: 75vw;
-        height: 45vh;
-    } */
+    /* Align the Contact Info & the Map next to each other */
 
-    .contactInfo {
-        position: relative;
-        width: 45vw;
-        height: auto;
-        padding: 1em;
-    }
+    address div.contactMe {
+       position: absolute;
+       padding: 2px;
+            }
 
     /* Map */
-    div .mapouter, .gmap_canvas 
-    {
-        position: relative;
-        width: 300px;
-        height: 144px;
+    address div.gmap_canvas {
+        margin-left: 5px;
         overflow: scroll;
         background: none !important;
         justify-content: center;}
-    
-        
-	/* Style format for footer */
-    footer 
-    {
-		margin: 0;
-		padding: 10px 12px;
-		background-color: #6096ba;
-        color: #e7ecef;
-    }
 
-    @media screen and (min-width: 700px) {
-        div.contactMe {
-            float: left;
-            width: 45%;
-            padding: 5rem; }
-        
-        div.gmap_canvas {
-            float: right;
-            width: 50%;
-            height: auto;
-            padding: rem;}  }
+    address div iframe {
+        width:100%;
+        height: 100%;   }
+
+    	/* Style format for footer */
+        footer 
+        {
+            margin: 0;
+            padding: 10px 12px;
+            background-color: #6096ba;
+            color: #e7ecef;
+        }
+    }
