--- a/assignments/lesson-6/styles/small-6.css
+++ b/assignments/lesson-6/styles/small-6.css
@@ -49,21 +49,12 @@ footer {
     background-color: #6096ba;
     color: #e7ecef; }
 
-/* To run media query for small screens*/
-@media screen and (max-width: 500px ) {
-
-
-    div .weather5Day { 
+main div.weather5Day { 
         display: none;  }
 
-    /*Decrease the globe image to fit screen
-    and on header - create more visual appeal 
-    header img#homeTown {
-        display: center;
-        width: 10%;
-        height: 10%;  }*/
 
-    header section.siteHeading {
+/* HEADER */
+header section.siteHeading {
         position: relative;
         width: 75%;
         color: #e7ecef;
@@ -76,7 +67,8 @@ footer {
         color: #a3cef1;
         font-size: 70%;
         padding: 5%;  }
-    }
+  
+
 
 /* MAIN - 
 
@@ -164,26 +156,29 @@ footer {
                 div.weatherWindSpeed {
                     top: 8.25rem; }
 
-
-    /* ARTICLE & SECTION CONTENT PORTION */
-
-
         /* CONTACT AREA CONTENT */
         address {
-            background-color: #a3cef1; }
+            background-color: #a3cef1;
+            width: 100%;
+            height: 100%;    }
             
             div.contactInfo {
-                float: left;
                 text-align: center;
-                padding: 5%;     }
+                padding: 5%;
+                margin: auto;     }
 
             /* Map */
-             div.gmap_canvas {float:right;    } 
 
-             div.gmap_canvas {
-                width: 400px;
-                border: 1px solid #555;
-                box-shadow: 1px 1px 1px #777; }
+            address div iframe {
+                width:100%;
+                height: 100%;   }
+
+            address div.gmap_canvas {
+                position: relative;
+                    left: 15%;
+                width: 300px;
+                height: auto;
+                border: 1px solid #555; }
 
              /* FOOTER AREA */
              div.date {
