--- a/assignments/lesson-7/styles/medium-7.css
+++ b/assignments/lesson-7/styles/medium-7.css
@@ -1,6 +1,81 @@
 /* To run media query for medium screens */
-@media screen and (min-width: 501px) and (max-width: 800px) {
+@media screen and (min-width:501px) and (max-width:800px) {
 
+        body, header, nav, main, address, footer { 
+            margin: auto;
+            width: 100%;
+            height: 100%;  }
+    
+        div .weather5Day { 
+            display: block; }
+    
+        header section h1 {
+            text-align: center;
+            color: #e7ecef;}
+    
+    
+        /* Weather for 5 Day Forecast section and comments */
+        div .weather5Day {
+            width: 90%;
+            margin: 0;
+            text-align: center;
+            align-content:center;       }
+    
+        h3 .weatherTableTitle {
+            text-align: center;
+            font-size: 150%;
+            text-emphasis: bold;        }
+    
+        /* Weather images for webpage provided by openclipart.org - Public Domain */
+        table {
+            margin: auto;
+            justify-content: center;
+            text-align: align;
+            color: #8b8c89;
+            width: 60%;
+            padding: 2px;      }   
+    
+        th {
+            background-color: #274c77;
+            border: 1.5px solid #8b8c89;
+            margin: 0;
+            padding: 0;         }
+    
+        tbody {
+            border: 1.5px solid #8b8c89;        }
+    
+        .weatherImage {
+            height: auto;
+            width: 50px;
+            align-content: center;      }
+    
+        td .weathTemp {
+            height: 200%;
+            width: 200%;
+            align-content: center;  }
+    
+         /* Article format to include a lighter obaque background with a border */
+    
+        article {
+            margin: 10px auto;
+            background-color: #bec9db;
+            border: 1px solid #000;
+            box-shadow: 0 0 30px #777;
+            text-align: left;
+            padding: 10px;      }
+        
+
+    
+
+
+   
+            /* Style format for footer */
+            footer {
+                margin: 0;
+                padding: 10px 12px;
+                background-color: #6096ba;
+                color: #e7ecef; }
+                
     /* HEADER */
 
     /* Container Grid */
@@ -25,4 +100,92 @@ header.heading {
 @media screen and (min-width: 600px) and (max-width: 800px) {
         header img#homeTown {
              padding: 15px 20%; }
+        }
+
+@media screen and (min-width:501px) {        
+        /* Styling the navigation menu */
+            /* This hides the items in the Navigation list from the user's view until they hover over the "Menu" */
+    
+            nav button {
+                display: none;  }
+                
+                nav ul.hide {
+                    display: block;
+                  }
+
+
+ /* GRID - Navigation Menu layout & Formatting */
+    nav ul#menuCenter {
+        display: grid;
+        grid-template-columns: repeat(6,1fr);   }
+
+        li.menuHome {
+            grid-column-start: 1; }
+        li.menuPreston {
+            grid-column-start: 2; }
+        li.menuSodaSprings {
+            grid-column-start: 3; }
+        li.menuFishHaven {
+            grid-column-start: 4; }
+        li.menuStormCenter {
+            grid-column-start: 5; }
+        li.menuGallery {
+            grid-column-start: 6; }
+ 
+    img#imageArticle  {
+        float: right;
+        padding: 2%;
+    
+        display: inline-block;}
+
+        /* Align the Contact Info & the Map next to each other */
+    
+        address {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows:  1fr;
+            column-gap: 10%; 
+        
+            padding: 2%;}
+
+            address div.contactMe {
+                grid-column-start: 2;
+                grid-row-start:1 ;
+
+                display: grid;
+                grid-template-columns: 1fr 1fr;}               
+
+                .nested1 {
+                    grid-column-start: 1;
+                    grid-row-start:1;
+                    
+                    padding: 10px 0;}
+                .nested2 {
+                    grid-column-start: 2;
+                    grid-row-start:2;    }
+                .nested3 {
+                    grid-column-start: 2;
+                    grid-row-start:3;    }
+                .nested4 {
+                    grid-column-start: 1;
+                    grid-row-start:4;    }              
+                .nested5 {
+                    grid-column-start: 2;
+                    grid-row-start:4;    }
+                .nested6 {
+                    grid-column-start: 1;
+                    grid-row-start:5;    }
+                .nested7 {
+                    grid-column-start: 2;
+                    grid-row-start:5;
+                    
+                    font-size: 10px;}
+
+            .gmap_canvas {
+                grid-column-start: 1;
+                grid-column-end:2;
+                grid-row-start:1; 
+                grid-row-end: 2; 
+            
+                margin: auto;}
         }
