--- a/assignments/lesson-7/styles/small-7.css
+++ b/assignments/lesson-7/styles/small-7.css
@@ -223,9 +223,9 @@ section.siteHeading {
 /* GALLERY GRID */
 main div.gallery {
     display: grid;
-    grid-template-columns: minmax(300px, 500px);
-    grid-template-rows: minmax(10px, 300px);
-    row-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    row-gap: 20px;
 
  }
 
@@ -233,13 +233,8 @@ main div.gallery {
         grid-column-start: auto;
         grid-row-start: auto; 
 
-        width: auto;
-        height: auto;
-        overflow: hidden;
-    
         margin: auto;
-        padding: 10px;
-    
+
         box-shadow: 0 0 20px #777;
     }
 /*----- Clearfix: Force an Element not to collapse -----*/
