--- a/assignments/lesson-7/styles/medium-7.css
+++ b/assignments/lesson-7/styles/medium-7.css
@@ -94,6 +94,17 @@ header.heading {
  
             padding: 25px;  }
 
+    /* GALLERY GRID */
+    main div.gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: minmax(10px, 200px);
+        overflow: hidden;
+        row-gap: 20px;
+
+ }
+
+
 }  /* end of media query for 501px - 800px */
 
 /* To run NEW media query for different viewport size */
@@ -134,9 +145,7 @@ header.heading {
  
     img#imageArticle  {
         float: right;
-        padding: 2%;
-    
-        display: inline-block;}
+        padding: 2%; }
 
         /* Align the Contact Info & the Map next to each other */
     
