--- a/assignments/lesson-7/styles/large-7.css
+++ b/assignments/lesson-7/styles/large-7.css
@@ -70,7 +70,10 @@
         display: grid;
         grid-template-columns: repeat(3, 300px);
         grid-template-rows: repeat(2, 200px);
-        row-gap: 20px; }
+        column-gap: 30px;
+        row-gap: 20px;
+    
+        margin: auto;}
 
    
 
