--- a/assignments/lesson-7/styles/medium-7.css
+++ b/assignments/lesson-7/styles/medium-7.css
@@ -99,7 +99,10 @@ header.heading {
         display: grid;
         grid-template-columns: 300px 300px;
         grid-template-rows: 200px 200px;
-        row-gap: 20px; }
+        column-gap: 20px;
+        row-gap: 20px;
+    
+        margin: auto;}
 
 
 }  /* end of media query for 501px - 800px */
