--- a/assignments/lesson-7/styles/large-7.css
+++ b/assignments/lesson-7/styles/large-7.css
@@ -65,15 +65,7 @@
 		text-align: left;
         padding: 10px;      }
     
-    /* GALLERY GRID */
-    main div.gallery {
-        display: grid;
-        grid-template-columns: repeat(3, 300px);
-        grid-template-rows: repeat(2, 200px);
-        column-gap: 30px;
-        row-gap: 20px;
-    
-        margin: auto;}
+
 
    
 
@@ -100,3 +92,12 @@
             padding: 15px 35%;
     }
 } /* END OF MEDIA QUERY */
+
+@media screen and (min-width:1100px) {
+        /* GALLERY GRID */
+        main div.gallery {
+            display: grid;
+            grid-template-columns: repeat(3, 375px);
+            grid-template-rows: repeat(2, 1fr);
+            column-gap: 30px;
+            row-gap: 20px;  }
