--- a/assignments/lesson-7/styles/medium-7.css
+++ b/assignments/lesson-7/styles/medium-7.css
@@ -94,15 +94,7 @@ header.heading {
  
             padding: 25px;  }
 
-    /* GALLERY GRID */
-    main div.gallery {
-        display: grid;
-        grid-template-columns: 300px 300px;
-        grid-template-rows: 200px 200px;
-        column-gap: 20px;
-        row-gap: 20px;
-    
-        margin: auto;}
+
 
 
 }  /* end of media query for 501px - 800px */
@@ -198,3 +190,17 @@ header.heading {
             
                 margin: auto;}
         }
+
+@media screen and (min-width:700px) {
+    
+    /* GALLERY GRID */
+    main div.gallery {
+        display: grid;
+        grid-template-columns: repeat(2,375px);
+        grid-template-rows: repeat(3,1fr);
+        row-gap: 20px; 
+        column-gap: 20px;
+    
+        justify-content: center;
+        align-content: center;  }
+    }
