--- a/assignments/lesson-7/styles/medium-7.css
+++ b/assignments/lesson-7/styles/medium-7.css
@@ -6,7 +6,7 @@
             width: 100%;
             height: 100%;  }
     
-        div .weather5Day { 
+        div.weather5Day { 
             display: block; }
     
         header section h1 {
@@ -15,25 +15,27 @@
     
     
         /* Weather for 5 Day Forecast section and comments */
-        div .weather5Day {
+        div.weather5Day {
             width: 90%;
             margin: 0;
             text-align: center;
             align-content:center;       }
     
-        h3 .weatherTableTitle {
+        h3.weatherTableTitle {
             text-align: center;
             font-size: 150%;
-            text-emphasis: bold;        }
+            font-weight: bold;        }
     
         /* Weather images for webpage provided by openclipart.org - Public Domain */
         table {
             margin: auto;
             justify-content: center;
-            text-align: align;
+            text-align: center;
             color: #8b8c89;
             width: 60%;
-            padding: 2px;      }   
+            padding: 2px;
+        
+            z-index: 10;}   
     
         th {
             background-color: #274c77;
@@ -49,7 +51,7 @@
             width: 50px;
             align-content: center;      }
     
-        td .weathTemp {
+        td.weathTemp {
             height: 200%;
             width: 200%;
             align-content: center;  }
