--- a/assignments/lesson-7/styles/medium-7.css
+++ b/assignments/lesson-7/styles/medium-7.css
@@ -1,12 +1,12 @@
 /* To run media query for medium screens */
-@media screen and (min-width:501px) and (max-width:800px) {
+@media screen and (min-width:501px) {
 
         body, header, nav, main, address, footer { 
             margin: auto;
             width: 100%;
             height: 100%;  }
     
-        div.weather5Day { 
+        main div.weather5Day { 
             display: block; }
     
         header section h1 {
@@ -15,19 +15,19 @@
     
     
         /* Weather for 5 Day Forecast section and comments */
-        div.weather5Day {
+        main div.weather5Day {
             width: 90%;
             margin: 0;
             text-align: center;
             align-content:center;       }
     
-        h3.weatherTableTitle {
+        main div h3.weatherTableTitle {
             text-align: center;
             font-size: 150%;
             font-weight: bold;        }
     
         /* Weather images for webpage provided by openclipart.org - Public Domain */
-        table {
+        main div table {
             margin: auto;
             justify-content: center;
             text-align: center;
