--- a/assignments/lesson-8/styles/small-8.css
+++ b/assignments/lesson-8/styles/small-8.css
@@ -239,10 +239,9 @@ div {
     padding: .25rem;  }
 
 fieldset {
-    width: 50%;
+    width: 90%;
     border: 2px solid #274c77;
-    padding: 1rem;
-    border-collapse: separate;
+    padding: .25rem;
 }
     div.fieldTitle {
         font-size: 125%;
