--- a/assignments/lesson-8/styles/small-8.css
+++ b/assignments/lesson-8/styles/small-8.css
@@ -238,7 +238,9 @@ form {
     margin: auto;
     font-size: 13px; }
 
-    form>h1 {font-size: 90%;}
+    form > h1 {
+        font-size: 90%;
+        padding: 5px 0; }
 
 div {
     padding: .5rem;  }
