--- a/assignments/lesson-9/practice-w9/hawaii.css
+++ b/assignments/lesson-9/practice-w9/hawaii.css
@@ -15,6 +15,7 @@ html {
   h1, h2 {
     font-family: 'ZCOOL KuaiLe', cursive;
     color: #F3A712;
+    letter-spacing: .1rem;
 
   }
   
@@ -50,6 +51,6 @@ html {
   
   h2 {
     font-size: 2.5rem;
-    letter-spacing: -5px;
+    letter-spacing: 5px;
     margin-bottom: 10px;
   }
